# languages-playground

./: .gitignore
C++/: .gitignore  test.cpp
C++/Art-Of-Development-C++/4-brown-belt/week-2/01-learning-example/: 01-learning-example.cpp  CMakeLists.txt  json.cpp  json.h  test_runner.h  tools.h  xml.cpp  xml.h
C++/Cherno-YT/firstproj/: CMakeCache.txt  CMakeLists.txt  build.sh
C++/Cherno-YT/initializer-list/: initializer-list.cpp
C++/Cherno-YT/mutable/: mutable.cpp
C++/Cherno-YT/pointers/: pointers.cpp  references.cpp
C++/Cherno-YT/static/: static-for-class-struct.cpp  static-in-cpp.cpp  static-in-cpp.h  static-local.cpp
C++/Grokking-Algorithms/01-into-to-algs/: binary_search.cpp
C++/Grokking-Algorithms/02-selection-sort/: selection-sort.cpp
C++/Grokking-Algorithms/04-quicksort/: Makefile  quicksort.cpp
C++/Grokking-Algorithms/06-breadth-search/: generate-random-graph.cpp
C++/Multi-Threading-CppNuts/: 01-threads.cpp  02-different-types.cpp  03-join-detach.cpp  04-mutex.cpp  05-mutex-try-lock.cpp  06-std-try-lock.cpp  07-timed-mutex.cpp  08-recursive-mutex.cpp  09-lock-guard.cpp  10-unique-lock.cpp  11-condition-variable.cpp  threads.cpp
C++/Multi-Threading-Williams/chapter-01/: 01-start.cpp
C++/Multi-Threading-Williams/chapter-02/: 01-how-to-create-thread.cpp  02-potential-dangling-link.cpp  03-always-join.cpp  04-create-thread-guard.cpp  05-example-of-detach.cpp  06-example-of-move.cpp  07-example-of-create-in-func.cpp  08-example-of-scoped-thread.cpp  09-example-few-threads.cpp  10-example-parallel-accumulate.cpp
C++/Multi-Threading-Williams/chapter-03/: 01-example-mutex.cpp  04-example-of-deadlock.cpp  06-example-hierarchical-mutex.cpp  09-example-tread-safe-lazy-init.cpp  10-example-shared-mutex.cpp
C++/Multi-Threading-Williams/chapter-04/: 01-example-condition-variable.cpp  02-example-treadsafe-queue.cpp  03-example-simple-future.cpp  04-example-async-argument.cpp  05-example-packaged-task.cpp
C++/Qt-5.10-Max-Shlee/01-chapter/00-program/: CMakeLists.txt
C++/Qt-5.10-Max-Shlee/01-chapter/01-program/: 01-two-windows.cpp  CMakeLists.txt
C++/Qt-5.10-Max-Shlee/01-chapter/04-chapter/: CMakeLists.txt  tulip.cpp
C++/Qt-5.10-Max-Shlee/06-chapter/layouts-calculator/: CMakeLists.txt  Calculator.cpp  Calculator.h  main.cpp
C++/S-Mayers-55-tips-C++/: rule-06.cpp  rule-10.cpp  rule-11.cpp  rule-12.cpp  rule-13.cpp  rule-14.cpp  rule-15.cpp  rule-16.cpp  rule-17.cpp  rule-19.cpp  rule-2.cpp  rule-20.cpp  rule-21.cpp  rule-3.cpp  rule-4.cpp  rule-5.cpp  rule-6.cpp  rule-7.cpp  rule-8.cpp
C++/StackOverFlow-C++/: 01-copy-and-swap-idiom.cpp
C++/Unix-Programming/: README.md
C++/arithmetic_expressions/: arithmetic_expressions.cpp
C++/data_class/: data_class.cpp
C++/function_timer/: a.out
C++/inheritance/: inheritance_deq_obj_constr  inheritance_main.cpp
C++/partial_sum/: partial_sum_test.cpp
C++/polymorphism/: a.out  polymorphism  polymorphism.cpp  virtual_override_expl
C++/shared_ptr/: a.out  shared_ptr  shared_ptr.cpp
Python/: API_Stepik.ipynb  Beautiful_Soup_Corey_Schafer.ipynb  CSV-Parsing.ipynb  Calculate_Future_Dates.ipynb  Classes_OPP_Corey.ipynb  Concepts_&_Programming_Terms.ipynb  Generators_&_Decorators.ipynb  Itertools_Lib.ipynb  Json_Tutorial.ipynb  Namedtuple.ipynb  PlayGround.ipynb  Regular_Expressions_Corey_Schafer.ipynb  Regular_Expressions_Stepik_Examples.ipynb  Requests_Module.ipynb  SQLite2.ipynb  Scope.ipynb  Script-For-Renaming-Files.ipynb  Tips_For_Python.ipynb  sample.txt  wisdom_table_correctness.html
Python/.ipynb_checkpoints/: CSV-Parsing-checkpoint.ipynb  Classes_OPP_Corey-checkpoint.ipynb  Concepts_&_Programming_Terms-checkpoint.ipynb  Context_Manager-checkpoint.ipynb  Generators_&_Decorators-checkpoint.ipynb  Json_Tutorial-checkpoint.ipynb  Logging-checkpoint.ipynb  Os-Module-checkpoint.ipynb  PlayGround-checkpoint.ipynb  Regular_Expressions_Corey_Schafer-checkpoint.ipynb  Tips_For_Python-checkpoint.ipynb
Python/01-tips/: tip-01.py  tip-04.py  tip-05-01.py  tip-06.py
Python/03-concepts/: README.md
Python/04-calculate-future-dates/: README.md
Python/06-api-stepik/: README.md
Python/09-generators-decorators/: README.md
Python/11-json-tutorial/: README.md
Python/12-logging/: README.md
Python/14-os-module/: README.md
Python/15-playground/: README.md
Python/19--scope/: README.md
Python/20-script-for-renaming-files/: README.md
Python/Files/: employee.db
SQL/: code_for_datagrip.txt  conspectus-commands-posgres.txt  some-commands-NEED-TO-OPTIMIZE.txt  source.sql  test-query-00.sql  test-query-01.sql  test-query-02.sql  test-query-06.sql  test-query-07.sql  test-query-08.sql  test-query-09.sql  test-query-10.sql  test-query-11.sql  test-query-12.sql  test-query-13.sql  test-query-14.sql  test-query-15.sql  test-query-16.sql  test-query-17.sql  test-query-18.sql  test-query-19.sql  test-query-20.sql  test-query-21.sql  test-query-23.sql  test-query-24.sql  test-query-25.sql  test-query-26.sql  test-query-27.sql  test-query-28.sql  test-query-3.sql  test-query-4.sql  test-query-5.sql
(+567 files in other folders)
